# llm-25

./: .gitignore  README.md
lectures/: README.md
projects/: README.md
projects/aa-semennikov/lab_1/: README.md  requirements.txt  results.json
projects/aa-semennikov/lab_2/: README.md  requirements.txt
projects/aa-semennikov/lab_3/: README.md  requirements.txt
projects/ai-timoshchuk_bondar/lab3/: .env  lab3.py  readme.md  (+3 more)
projects/as-harlamov/: .gitignore  README.md
projects/be-poloshkov/: README.md
projects/dp-kirpa/: README.md
projects/eo-cherednikov/: README.md
projects/ia-morozov/lab1/source/: .env.example  docker-compose.yaml  main.ipynb  main.py  pyproject.toml
projects/ia-morozov/lab1/source/assets/: table.md
projects/ia-morozov/lab1/source/results/: Qwen_Qwen2.5-7B-Instruct.csv  google_gemma-3-4b-it.csv  mistralai_Ministral-8B-Instruct-2410.csv  yandex_YandexGPT-5-Lite-8B-instruct.csv
projects/ie-danilenko/: README.md
projects/kp-mezhuyev/: README.md
projects/ma-yamkin/: README.md
projects/mt-desta/: README.md
projects/r-issa/: ReadMe.md
projects/rt-akhmarov/: docker-compose.yml  pyproject.toml  run_lab1.py  run_rag.py
projects/rt-akhmarov/config/: inputs_v2.yml  models.yml  prompts_v1.yml
projects/rt-akhmarov/data/: verl_questions.jsonl
projects/rt-akhmarov/scripts/: build_index.py  launch_server.sh  load_to_qdrant.py  parser.py  request_llm.sh  upload_to_langfuse.py
projects/rt-akhmarov/src/: llm.py  rag.py  utils.py
tasks/: README.md
tasks/task-01/: README.md
tasks/task-02/: README.md
tasks/task-03/: README.md
(+553 files in other folders)
